<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">SMOLDiR</string>
    <string name="channel_id" translatable="false">SMOLDiR</string>
    <string name="default_notification_channel_name">SMOLDiR</string>
    <string name="action_settings">Settings</string>
    <string name="registration_prompt">Please enter the 6-digit registration code found on the back of your device.</string>
    <string name="nickname_prompt">Give the device a location-based name (e.g. Kitchen).</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register Device</string>
    <string name="login">Login</string>
    <string name="sign_up_prompt">Don\'t have an account? Create one.</string>
    <string name="login_prompt">Already have an account? Login.</string>
    <string name="create_account">Create Account</string>
    <string name="server_client_id">1009762478612-ooi106evsru4ba7euu21ntgf67k2puqv.apps.googleusercontent.com</string>
    <string name="client_id">811354252455-dg3ci48giudvv81i4tjjkhfkc02vm5s0.apps.googleusercontent.com</string>
    <string name="title_activity_wifi_fragment">WifiFragment</string>
    <string name="wifi">Push WiFi information</string>
    <string name="install">Need to install? Click here.</string>
</resources>
